center info-box on mobile with fixed positioning

--- a/src/assets/stylesheets/sass/_info-box.scss
+++ b/src/assets/stylesheets/sass/_info-box.scss
@@ -12,6 +12,8 @@
 // <div class="message message--warning" data-header="">
 //   <p>If you need an info box on the left side of the window, you may want to add the modifier class of <code>info-box--left</code> to your info-box, to ensure that the content doesn't open outside of the viewport.</p>
 // </div>
+// 
+// Below `768px` the info-box will be fixed and centered on the page. Similar to our tooltips.
 //
 // Markup:
 // <div class="info-box">
@@ -22,106 +24,12 @@
 //     <button class="button info-box__close">
 //       Close <i class="pi-times" aria-hidden="hidden"></i>
 //     </button>
-//     <form action="" class="block-container block-mb-4 form">
-//       <label for="dob" class="block form__field has-icon">Birthday
-//         <input id="dob" type="date" placeholder="DD/MM/YYYY">
-//         <i class="pi-calendar text-skyblue background-white"></i>
-//       </label>
-//       <fieldset class="block form__field">
-//         <legend>Please Choose</legend>
-//         <div class="toggle">
-//           <div class="toggle__content">
-//             <input class="toggle__input" id="smoking" type="radio" checked name="rate">
-//             <label for="smoking">This one</label>
-//           </div>
-//           <div class="toggle__content">
-//             <input class="toggle__input" id="non-smoking" type="radio" name="rate">
-//             <label for="non-smoking">That one</label>
-//           </div>
-//         </div>
-//       </fieldset>
-//       <fieldset class="block form__field">
-//         <legend>Also Choose</legend>
-//         <div class="toggle">
-//           <div class="toggle__content">
-//             <input class="toggle__input" id="Single" type="radio" checked name="household">
-//             <label for="Single">Red Fish</label>
-//           </div>
-//           <div class="toggle__content">
-//             <input class="toggle__input" id="household" type="radio" name="household">
-//             <label for="household">Blue Fish</label>
-//           </div>
-//         </div>
-//       </fieldset>
-//       <fieldset class="block form__field">
-//         <legend id="radio-heading">Pick Some Letters</legend>
-//         <div class="block-container" role="radiogroup" aria-labelledby="radio-heading">
-//           <div class="block-3 my-2 px-1">
-//             <span class="pill background-light text-white flex--align-center" id="a" tabindex="0" role="radio" aria-checked="false">
-//               <i class="pi-circle"></i> A
-//             </span>
-//           </div>
-//           <div class="block-3 my-2 px-1">
-//             <span class="pill background-light text-white flex--align-center" id="B" tabindex="0" role="radio" aria-checked="false">
-//               <i class="pi-circle"></i> B
-//             </span>
-//           </div>
-//           <div class="block-3 my-2 px-1">
-//             <span class="pill background-light text-white flex--align-center" id="C" tabindex="0" role="radio" aria-checked="false">
-//               <i class="pi-circle"></i> C
-//             </span>
-//           </div>
-//           <div class="block-3 my-2 px-1">
-//             <span class="pill background-light text-white flex--align-center" id="D" tabindex="0" role="radio" aria-checked="false">
-//               <i class="pi-circle"></i> D
-//             </span>
-//           </div>
-//           <div class="block-3 my-2 px-1">
-//             <span class="pill background-light text-white flex--align-center" id="F" tabindex="0" role="radio" aria-checked="false">
-//               <i class="pi-circle"></i> F
-//             </span>
-//           </div>
-//           <div class="block-3 my-2 px-1">
-//             <span class="pill background-light text-white flex--align-center" id="G" tabindex="0" role="radio" aria-checked="false">
-//               <i class="pi-circle"></i> G
-//             </span>
-//           </div>
-//           <div class="block-3 my-2 px-1">
-//             <span class="pill background-light text-white flex--align-center" id="Hi-F" tabindex="0" role="radio" aria-checked="false">
-//               <i class="pi-circle"></i> Hi-F
-//             </span>
-//           </div>
-//           <div class="block-3 my-2 px-1">
-//             <span class="pill background-light text-white flex--align-center" id="K" tabindex="0" role="radio" aria-checked="false">
-//               <i class="pi-circle"></i> K
-//             </span>
-//           </div>
-//           <div class="block-3 my-2 px-1">
-//             <span class="pill background-light text-white flex--align-center" id="L" tabindex="0" role="radio" aria-checked="false">
-//               <i class="pi-circle"></i> L
-//             </span>
-//           </div>
-//           <div class="block-3 my-2 px-1">
-//             <span class="pill background-light text-white flex--align-center" id="M" tabindex="0" role="radio" aria-checked="false">
-//               <i class="pi-circle"></i> M
-//             </span>
-//           </div>
-//           <div class="block-3 my-2 px-1">
-//             <span class="pill background-light text-white flex--align-center" id="N" tabindex="0" role="radio" aria-checked="false">
-//               <i class="pi-circle"></i> N
-//             </span>
-//           </div>
-//           <div class="block-3 my-2 px-1">
-//             <span class="pill background-light text-white flex--align-center" id="All" tabindex="0" role="radio" aria-checked="false">
-//               <i class="pi-circle"></i> All
-//             </spann>
-//           </div>
-//         </div>
-//       </fieldset>
-//       <div class="form__field form__button-group">
-//         <button class="button button--post button--lg">Submit</button>
-//       </div>
-//     </form>
+//     <p class="mb-0">
+//       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eu luctus nisl. Nunc volutpat enim id mauris ultricies, eget interdum arcu tristique. Quisque congue vestibulum turpis et consectetur.
+//     </p>
+//     <p class="mb-0">
+//       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eu luctus nisl. Nunc volutpat enim id mauris ultricies, eget interdum arcu tristique. Quisque congue vestibulum turpis et consectetur.
+//     </p>
 //   </div>
 // </div>
 // <div class="info-box info-box--left ml-5">
@@ -227,14 +135,33 @@
     border: 1px solid color.adjust(map.get(variables.$greyscale, 'light'), $lightness: math.percentage(config.$hue-threshold * 2));
     box-shadow: 0 1rem 2rem rgba(map.get(variables.$greyscale, 'black'), .4);
     margin-top: variables.$spacer;
-    width:100%;
-    @include mixins.breakpoint(tablet, min) {
-      width:20rem;
-    }
     padding: map.get(variables.$spacers, 5) map.get(variables.$spacers, 4);
     position: absolute;
-    z-index: 50;
     top:100%;
+    width: 20rem;
+    z-index: 50;
+
+    @include mixins.breakpoint(tablet, max) {
+      position: fixed;
+      bottom: auto; 
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      margin-top: 0;
+      max-height: 100vh;
+      overflow-y: auto;
+
+      .header-fixed & {
+        max-height: calc(100vh - #{var(--menu-height)});
+        top: calc(50% + (#{var(--menu-height)} / 2));
+      }
+
+      &::before,
+      &::after {
+        display: none;
+      }
+    }
+
     &:before {
       content: '';
       position: absolute;
